# test-task-salesbrush

./: LICENSE  README.md  pyproject.toml  pytest.ini  run.py
src/database/: __init__.py  db.py  models.py
src/schemas/: __init__.py  conversion.py  merged.py  spend.py
src/services/: __init__.py  calculator.py  data_loader.py  etl_service.py  rate_limiter.py  scheduler.py
src/settings/: __init__.py  api.py  database.py  scheduler.py
src/utils/: __init__.py  logger.py
tests/: test_calculator.py  test_data_loader.py  test_etl_integration.py  test_etl_service.py  test_rate_limiter.py  test_schemas.py
